# Colocviu_Cafenea_virtuala

./: Angajat.h  Barista.h  CMakeLists.txt  Comenzi.h  Evenimente.h  Import_Export.h  Manager.h  Ospatar.h  Produse.h  Program.h  README.md  Raport.h  Tura.h  main.cpp
